10th - view report(image form), same patient in multiple reports but same image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<div class="navbar-brand">
-					<h4>HEALTHCARE</h4>
+					<h4><div class="icon">HEALTHCARE</div></h4>
 				</div>
 			</div>
 			<div class="collapse navbar-collapse col" id="bs-example-navbar-collapse-1">
