--- a/log.html
+++ b/log.html
@@ -23,7 +23,7 @@
     		        	<li class="dropdown"><a href="#forms" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Forms <span class="caret"></span></a>
     		        		<ul class="dropdown-menu">
             					<li><a href="np.html">New Patient</a></li>
-            					<li><a href="rp.php">Regular Patient</a></li>
+            					<li><a href="regpat.php">Regular Patient</a></li>
           					</ul>
     		        	</li>
         	    		<li><a href="#specs">Specs</a></li>
