12th commit view report based on patient's name

--- a/log.html
+++ b/log.html
@@ -13,7 +13,8 @@
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<div class="navbar-brand">
-					<h4><div class="icon">HEALTHCARE</div></h4>
+					<!-- <h4><div class="icon"></div></h4> -->
+					<h4><img src="imageBack/1.jpg" height="50px" style="margin-top:-10px"/>HealthCARE</h4>
 				</div>
 			</div>
 			<div class="collapse navbar-collapse col" id="bs-example-navbar-collapse-1">
